# Infotecs-Weather-API

./: pyproject.toml  script.py
api/: __init__.py
api/routers/: towns.py  users.py
api/schemas/: town.py  user.py
core/: __init__.py  config.py  database.py
core/models/: base.py  town.py  user.py
core/repositories/: town.py  user.py
core/services/: town.py  user.py  weather.py  weather_update.py
core/tasks/: weather.py
core/utils/: time.py
repositories/: town.py  user.py
services/: town.py  user.py
