[project]
name = "infotecs-weather-api"
version = "0.1.0"
description = ""
authors = [
    {name = "redun",email = "redunsasha2017@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.139.2,<0.140.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pytest (>=9.1.1,<10.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "uvicorn (>=0.51.0,<0.52.0)",
    "aiosqlite (>=0.22.1,<0.23.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
